// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledH1 renders correctly 1`] = `
<h1
  className="sc-bdVaJa FZjlp"
/>
`;

exports[`StyledHeaderComponent renders correctly 1`] = `
<div
  className="sc-bwzfXH fHzpjp"
/>
`;

exports[`StyledLeft renders correctly 1`] = `
<div
  className="sc-htpNat kNeozb"
/>
`;

exports[`StyledMusicIcon renders soundOff 1`] = `
<div
  aria-label="toggle play music"
  className="sc-bxivhb dXjchO"
/>
`;

exports[`StyledMusicIcon renders soundOn 1`] = `
<div
  aria-label="toggle play music"
  className="sc-bxivhb bLTPXg"
/>
`;

exports[`StyledRight renders correctly 1`] = `
<div
  className="sc-ifAKCX eYtzkY"
/>
`;
